test/type-checking/bad/AddWrong.types
int main()
{
  int x = 2;
  double y = 2.0;

  int x2 = x*x;
  double y2 = y*y;
  bool b = true*true;
  string str = "hello" * "world";

  return 0;
}
